<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ScoreActivity">

    <ImageView
        android:id="@+id/cup"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintDimensionRatio="1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/trophy"/>

    <TextView
        android:id="@+id/textVieww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textS"
        app:layout_constraintTop_toBottomOf="@id/cup"
        app:layout_constraintStart_toStartOf="@id/cup"
        app:layout_constraintEnd_toEndOf="@id/cup"
        android:textSize="18sp"
        android:textColor="@color/navy_blue"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textScore"
        app:layout_constraintTop_toBottomOf="@id/textVieww"
        app:layout_constraintStart_toStartOf="@id/textVieww"
        app:layout_constraintEnd_toEndOf="@id/textVieww"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBack"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:background="@drawable/orange_background"
        style="@android:style/Widget.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        app:layout_constraintTop_toBottomOf="@id/scoreTxt"
        app:layout_constraintStart_toStartOf="@id/textVieww"
        app:layout_constraintEnd_toEndOf="@id/textVieww"/>

</androidx.constraintlayout.widget.ConstraintLayout>