<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Activity.LeaderActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:background="@drawable/orange_background"
                android:text="@string/leaderChoice1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/button2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_background"
                android:text="@string/leaderChoice2"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/button1"
                app:layout_constraintTop_toTopOf="@id/button1"
                app:layout_constraintWidth_percent="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_background"
                android:text="@string/leaderChoice3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button2"
                app:layout_constraintTop_toTopOf="@id/button1"
                app:layout_constraintWidth_percent="0.3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTop1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button1"
                app:layout_constraintWidth_percent="0.3">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pic3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageview"
                    app:strokeColor="#AE844F"
                    app:strokeWidth="3dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:background="@drawable/circle_top_3"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/pic3"
                    app:layout_constraintStart_toStartOf="@id/pic3"
                    app:layout_constraintTop_toBottomOf="@id/pic3" />

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/constraintTop1"
                    app:layout_constraintStart_toStartOf="@id/constraintTop1"
                    app:layout_constraintTop_toBottomOf="@id/textView9" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/score_top_3"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    app:layout_constraintEnd_toEndOf="@id/constraintTop1"
                    app:layout_constraintStart_toStartOf="@id/constraintTop1"
                    app:layout_constraintTop_toBottomOf="@id/title3"
                    app:layout_constraintWidth_percent="0.3">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@null"
                        android:src="@drawable/garnet"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/scoreText3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@id/imageView10"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTop2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/constraintTop1"
                app:layout_constraintTop_toBottomOf="@id/button1"
                app:layout_constraintWidth_percent="0.3">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-2dp"
                    android:src="@drawable/crown"
                    android:contentDescription="@null"
                    app:layout_constraintBottom_toTopOf="@id/pic1"
                    app:layout_constraintEnd_toEndOf="@id/pic1"
                    app:layout_constraintStart_toStartOf="@id/pic1" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pic1"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageview"
                    app:strokeColor="#FEBB3A"
                    app:strokeWidth="3dp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/circle_top_1"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="@id/pic1"
                    app:layout_constraintStart_toStartOf="@id/pic1"
                    app:layout_constraintTop_toBottomOf="@id/pic1" />

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/constraintTop2"
                    app:layout_constraintStart_toStartOf="@id/constraintTop2"
                    app:layout_constraintTop_toBottomOf="@id/textView11" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/score_top_1"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    app:layout_constraintEnd_toEndOf="@id/constraintTop2"
                    app:layout_constraintStart_toStartOf="@id/constraintTop2"
                    app:layout_constraintTop_toBottomOf="@id/title1"
                    app:layout_constraintWidth_percent="0.3">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/garnet"
                        android:contentDescription="@null"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/scoreText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@id/imageView13"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTop3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/constraintTop2"
                app:layout_constraintTop_toBottomOf="@id/button1"
                app:layout_constraintWidth_percent="0.3">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/pic2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageview"
                    app:strokeColor="#BFBFC0"
                    app:strokeWidth="3dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:background="@drawable/circle_top_2"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@id/pic2"
                    app:layout_constraintStart_toStartOf="@id/pic2"
                    app:layout_constraintTop_toBottomOf="@id/pic2" />

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitle"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/constraintTop3"
                    app:layout_constraintStart_toStartOf="@id/constraintTop3"
                    app:layout_constraintTop_toBottomOf="@id/textView15" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/score_top_2"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title2"
                    app:layout_constraintWidth_percent="0.3">

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:src="@drawable/garnet"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/scoreText2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/text"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toEndOf="@id/imageView16"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toBottomOf="@id/constraintTop2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        app:cnb_iconSize="20dp"
        app:cnb_menuResource="@menu/bottom_menu"
        app:cnb_orientationMode="horizontal"
        app:cnb_radius="50dp"
        app:cnb_unselectedColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"></com.ismaeldivita.chipnavigation.ChipNavigationBar>

</androidx.constraintlayout.widget.ConstraintLayout>